fix fonts not show the correct weight problem

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,18 @@ flutter:
     - assets/shared/icons/2.0x/
     - assets/shared/icons/3.0x/
     - assets/shared/icons/4.0x/
+  fonts:
+    - family:
+      fonts:
+        - asset: fonts/Poppins-Regular.ttf
+        - asset: fonts/Poppins-Italic.ttf
+          style: italic
+        - asset: fonts/Poppins-Medium.ttf
+          weight: 500
+        - asset: fonts/Poppins-SemiBold.ttf
+          weight: 600
+
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
