--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   provider: ^6.0.2
+  smooth_page_indicator: ^1.0.0+2
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +66,10 @@ flutter:
     - assets/shared/icons/2.0x/
     - assets/shared/icons/3.0x/
     - assets/shared/icons/4.0x/
+    - assets/shared/images/
+    - assets/shared/images/2.0x/
+    - assets/shared/images/3.0x/
+    - assets/shared/images/4.0x/
   fonts:
     - family: Poppins
       fonts:
