--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^6.0.2
   smooth_page_indicator: ^1.0.0+2
+  simple_animations: ^4.0.1
 
 dev_dependencies:
   flutter_test:
