--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   provider: ^6.0.2
   smooth_page_indicator: ^1.0.0+2
   simple_animations: ^4.0.1
+  shared_preferences: ^2.0.13
 
 dev_dependencies:
   flutter_test:
