--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   smooth_page_indicator: ^1.0.0+2
   simple_animations: ^4.0.1
   shared_preferences: ^2.0.13
+  email_validator: ^2.0.1
+  firebase_core: ^1.16.0
+  firebase_auth: ^3.3.17
+  google_sign_in: ^5.3.0
 
 dev_dependencies:
   flutter_test:
