--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_core: ^1.16.0
   firebase_auth: ^3.3.17
   google_sign_in: ^5.3.0
+  image_picker: ^0.8.5+3
 
 dev_dependencies:
   flutter_test:
