--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   google_sign_in: ^5.3.0
   image_picker: ^0.8.5+3
   cloud_firestore: ^3.1.17
+  path_provider: ^2.0.10
+  path: ^1.8.1
+  image_cropper: ^2.0.3
 
 dev_dependencies:
   flutter_test:
