--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   path_provider: ^2.0.10
   path: ^1.8.1
   image_cropper: ^2.0.3
+  firebase_storage: ^10.2.17
 
 dev_dependencies:
   flutter_test:
