--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   path: ^1.8.1
   image_cropper: ^2.0.3
   firebase_storage: ^10.2.17
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
